src/lmt/style/style.css
/* ... */
header img.settings-icon { right: 44px; }
header img.favorites-icon { right: 76px; }
header img.upload-icon { right: 108px; }

header img:hover {
	opacity: 0.9;
}

header h1, header h4 {
	display: inline-block;
	font-size: 16pt;
	font-weight: 300;
	color: rgba(255,255,255,0.5);
	margin: 0 24px 0 12px;
	padding: 2px 0 0;
	vertical-align: top;
}
header h1 small {
	font-size: 10pt;
	font-weight: 400;
	font-style: italic;
	position: relative;
	top: 4px;
	left: 4px;
}

header .search {
	display: inline-block;
	height: 40px;
	vertical-align: top;
	-webkit-app-region: no-drag;
}
header .search input, header .search .select { margin-bottom: 5px; }
header .search .select { width: 120px; }
header .search input[type=search] { width: 400px; }
header .search input[type=text] { width: 65px; text-align: center; }

header.small {
	line-height: 24px;
	height: 24px;
}
header.small h1, header.small h4 {
	display: block;
	height: 24px;
	line-height: 24px;
	font-size: 11pt;
	font-weight: 400;
	letter-spacing: 0.04em;
	width: calc(100% - 48px);
	overflow: hidden;
	text-overflow: ellipsis;	
}
header.small .close-icon {
	top: 4px;
	right: 4px;
}

header.small.transparent, header.small.transparent > * {
	opacity: 0;
}
header.small.transparent:hover {
	opacity: 1;
}
header.small.transparent:hover > * {
	opacity: 1;
}
body:hover > header.small.transparent {
	opacity: 1;
}
body:hover > header.small.transparent > * {
	opacity: 1;
}


.inset {
	position: absolute;
	top: 40px;
	left: 0;
	right: 0;
	bottom: 0;
	padding: 20px;
}


#main, #overlay {
	display: block;
	position: absolute;
	top: 40px;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: 1;
}

#overlay {
	display: none;
	background: rgba(0,0,0,0) url(../images/wait.gif) center no-repeat;
	z-index: 10;
}

.emptylist {
	display: block;
	width: 320px;
	height: 24px;
	line-height: 24px;
	margin: -12px 0 0 -160px;
	position: absolute;
	top: 50%;
	left: 50%;

	letter-spacing: 0.02em;
	text-align: center; 
	font-size: 12pt;
	font-weight: 300; 
	font-style: italic;
	color: rgba(255,255,255,0.25);
}



#queuelist {
	position: absolute;
	top: 24px;
	left: 0;
	right: 0;
	bottom: 0;
	overflow-x: hidden;
	overflow-y: scroll;
}

#queuelist .entry {
	display: block;
	height: 24px;
	border-radius: 5px;
	background-color: rgba(0,0,0,0);
	margin: 4px;
	padding: 0;
	position: relative;
}
#queuelist .entry .progress {
	display: block;
	position: absolute;
	z-index: 1;
	left: 0;
	top: 0;
	height: 24px;
	width: 0%;
	background-color: rgba(0,240,0,0.3);
	border-radius: 5px;
}
#queuelist .entry .title {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	height: 24px;
	width: 100%;
	z-index: 5;
	line-height: 32px;
	font-size: 9pt;
	font-weight: 400;
	padding: 0 8px;
	overflow: hidden;
	text-overflow: ellipsis;
	color: rgba(255,255,255,0.3);
}

#queuelist .entry.active {
	background-color: rgba(0,0,0,0.2);
}
#queuelist .entry.active .title {
	color: rgba(255,255,255,0.9);
}
#queuelist .entry.active > img { opacity: 0; }




#userinfo {
	z-index: 2;
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;

	display: block;
	width: 179px;

	background-color: rgba(0,0,0,0.2);
	text-align: center;

	padding: 20px 0 0;
}
#userinfo h3 {
	display: inline-block;
	text-overflow: ellipsis;	
	font-size: 12pt;
	font-weight: 300;
	letter-spacing: 0.03em;
	display: block;
	width: 180px;
	margin: 0 auto 8px;
}
#userinfo .avatar { 
	display: inline-block;
	width: 160px;
	height: 160px;
	border-radius: 80px;
}

#userinfo label {
	display: block;
	font-size: 9pt;
	font-weight: 400;
	padding: 12px 10px 2px;
	color: rgba(255,255,255,0.5);
}

#userinfo h4 { font-size: 12pt; font-weight: 300; color: rgba(255,255,255,0.5); padding: 12px 0 16px; }
#userinfo input[type=text] { width: 140px; text-align: center; }
#userinfo input[type=button] {
	display: inline-block;
	width: 140px;
	margin: 0 0 16px;
}

#userinfo input[type=button]#favorites_button {
	width: 100px;
	height: 32px;
	border-radius: 5px;
	border: none;
	text-align: left;
	padding: 0 8px 0 40px;
	background: transparent;
	background-image: url(../images/ic_favorite_border_white_24px.svg);
	background-size: 24px 24px;
	background-repeat: no-repeat;
	background-position: 8px 4px;
	color: rgba(255,255,255,0.8);
	opacity: 0.3;
	box-shadow: none;
}

#userinfo input[type=button]#favorites_button:hover { opacity: 0.5; }

#userinfo input[type=button]#favorites_button.active {
	background-image: url(../images/ic_favorite_white_24px.svg);
	color: rgba(255,255,0,0.8);
	opacity: 0.9;
}
#userinfo input[type=button]#favorites_button.active:hover { opacity: 1; }

#videolist, #userlist {
	z-index: 2;
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 180px;
	overflow-x: hidden;
	overflow-y: auto;
}
#userlist { left: 0; }


#video {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	display: block;
    width: 100%;
    height: 100%;
    z-index: 1;
}

#small_user_list {
	display: block;
	position: absolute;
	top: 24px;
	bottom: 0;
	left: 0;
	right: 0;
	overflow-x: hidden;
	overflow-y: scroll;
}

.user_entry {
	display: block;
	height: 100px;
	width: calc(100%-10px);
	margin: 10px 5px;

	position: relative;
	background-color: #595b5b;

	border-radius: 50px;
}

.user_entry .avatar {
	display: block;
	width: 100px;
	height: 100px;

	border: solid 5px #000;
	border-radius: 50px;

	position: absolute;
	left: 0;
	top: 0;
}
.user_entry.male > .avatar { border-color: #89CFF0; }
.user_entry.female > .avatar { border-color: #F9CCCA; }


.user_entry h4 {
	position: absolute;
	left: 110px;
	top: 10px;
	font-size: 14pt;
	line-height: 20px;
	font-weight: 400;
	color: #eaebed;
	letter-spacing: 0.04em;
}
.user_entry .userid {
	position: absolute;
	top: 35px;
	line-height: 30px;
	left: 210px;
	font-size: 10pt;
	font-weight: 400;
	color: #eaebed;
}
.user_entry .level {
	position: absolute;
	top: 35px;
	left: 115px;
	font-size: 10pt;
	line-height: 30px;
	font-weight: 400;
	color: #eaebed;
}
/* ... */

